hphp/test/slow/modules/internal-function-1.php.expectf
Fatal error: Uncaught exception 'ModuleBoundaryViolationException' with message 'Accessing internal function foo in module A from module B is not allowed' in %s/internal-function-1.php:7
Stack trace:
%A
